@@ -14,6 +14,9 @@
    - stevesk@cvs.openbsd.org 2002/02/26 20:03:51
      [misc.c]
      use socklen_t
+   - stevesk@cvs.openbsd.org 2002/02/27 21:23:13
+     [canohost.c channels.c packet.c sshd.c]
+     remove unneeded casts in [gs]etsockopt(); ok markus@
 
 20020226
  - (tim) Bug 12 [configure.ac] add sys/bitypes.h to int64_t tests
